--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -2,17 +2,18 @@
 
 body {
   background: #F8F8F8;
+  color: #333;
 }
 
 main.concierge {
+  .gotham();
   display: flex;
   margin: auto;
   max-width: 2000px;
-  .gotham();
-  padding: 60px 40px;
+  padding: 20px 15px 40px 15px;
 
-  @media @mobile {
-    padding: 60px 12px;
+  @media @mobile-above {
+    padding: 40px;
   }
 }
 
