--- a/src/css/values.less
+++ b/src/css/values.less
@@ -43,6 +43,23 @@
 @unbiased: #000005;
 @true: #237bbd;
 
+// other mixins
+.buttonBase() {
+  border: 1px solid transparent;
+  border-radius: 4px;
+  display: inline-block;
+  font-size: 11px;
+  padding: 5px 6px;
+  text-decoration: none;
+  text-transform: capitalize;
+  white-space: nowrap;
+
+  @media @mobile-above {
+    font-size: 12px;
+  }
+}
+
+
 // a11y
 
 .sr-only {
