--- a/src/css/catalog.less
+++ b/src/css/catalog.less
@@ -19,12 +19,29 @@
   }
 
   .clear-filters {
-    display: inline;
-    border: 1px solid var(--accent);
-    text-transform: uppercase;
+    .buttonBase();
+    border-color: var(--header);
+    color: var(--header);
     background: transparent;
-    padding: 4px;
     cursor: pointer;
+    margin-left: 6px;
+
+    &::before {
+      content: "";
+      margin-left: 4px;
+      float: right;
+      background: url('./assets/icons/times-circle.svg') no-repeat;
+      background-size: contain;
+      width: .9rem;
+      height: .9rem;
+      display: inline-block;
+      opacity: 0.7;
+    }
+
+    &:hover, &:focus {
+      color: white;
+      opacity: 0.6;
+    }
 
     [data-tags="0"] & {
       display: none;
