--- a/src/css/theming.less
+++ b/src/css/theming.less
@@ -10,13 +10,13 @@
 @accent-2017: #b53765;
 @header-2018: @accent-2018;
 @accent-2018: #1097c3;
-@header-2019: #666;
+@header-2019: #626;
 @accent-2019: #808;
 
 .setup-year(@year, @accent, @header) {
   body[data-year="@{year}"] {
     --accent: @accent;
-    --accent-spin: darken(spin(@accent, 40%), 10%);
+    --accent-spin: darken(saturate(spin(@accent, 60), 5%), 10%);
     --header: @header;
   };
 }
