--- a/src/css/header.less
+++ b/src/css/header.less
@@ -149,6 +149,11 @@ header.hero {
       &:hover + label,
       &:focus + label {
         z-index: 999;
+        background-color: #888;
+      }
+
+      &:focus + label {
+        text-decoration: underline;
       }
 
       &:checked + label {
