--- a/src/css/theming.less
+++ b/src/css/theming.less
@@ -10,8 +10,8 @@
 @accent-2017: #b53765;
 @header-2018: @accent-2018;
 @accent-2018: #1097c3;
-@header-2019: #626;
-@accent-2019: #808;
+@header-2019: #4e174e;
+@accent-2019: #9a4a9a;
 
 .setup-year(@year, @accent, @header) {
   body[data-year="@{year}"] {
