--- a/src/css/fab.less
+++ b/src/css/fab.less
@@ -42,6 +42,13 @@
       width: 100%;
       height: 100%;
       opacity: 0;
+      font-size: 20px;
+      overflow: hidden;
+      // text-transform: capitalize;
+
+      &:focus {
+        font-size: 20px;
+      }
     }
   }
 
