Enforce sorting at the service level

--- a/src/partials/_head.html
+++ b/src/partials/_head.html
@@ -29,7 +29,7 @@
 <meta property="og:title" content="<%= project.title %>">
 <meta property="og:site_name" content="NPR Visuals">
 <meta property="og:url" content="<%= project.url %>">
-<meta property="og:image" content="<%= project.url + project.image %>">
+<meta property="og:image" content="<%= project.url + project.image %>?fbreset=1">
 <meta property="og:description" content="<%= project.description %>">
 
 <!-- Facebook-specific meta -->
