--- a/src/css/fab.less
+++ b/src/css/fab.less
@@ -46,6 +46,7 @@
       overflow: hidden;
       // text-transform: capitalize;
 
+      // don't do a dramatic chipmunk zoom when tapped
       &:focus {
         font-size: 20px;
       }
