Match currentColor in clear button icon

--- a/src/css/catalog.less
+++ b/src/css/catalog.less
@@ -31,7 +31,7 @@
       display: none;
     }
 
-    &::before {
+    & svg {
       content: "";
       margin-left: 4px;
       float: right;
@@ -45,6 +45,7 @@
 
     &:hover, &:focus {
       color: white;
+      background: var(--accent);
       opacity: 0.6;
     }
 
