header / spacing tweaks

--- a/src/css/catalog.less
+++ b/src/css/catalog.less
@@ -53,7 +53,7 @@
   .section-header {
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items: center;
     padding-bottom: 12px;
     flex-wrap: wrap;
 
