--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -12,7 +12,7 @@ main.concierge {
   max-width: 2000px;
   padding: 20px 15px 40px 15px;
 
-  @media @mobile-above {
+  @media @tablet-above {
     padding: 40px;
   }
 }
