--- a/src/css/footer.less
+++ b/src/css/footer.less
@@ -1,9 +1,24 @@
 footer {
   background: white;
   border-top: 1px solid #CCC;
-  padding: 50px;
+  padding: 20px 15px;
 
-  .logo {
-    height: 30px;
+  @media @tablet-above {
+    padding-left: 40px;
+    padding-right: 40px;
+  }
+
+  .constrained {
+    display: block;
+    margin: 0;
+  }
+
+  .npr {
+    padding: 0;
+
+    ul {
+      border: none;
+      padding: 0;
+    }
   }
 }
