--- a/src/css/list.less
+++ b/src/css/list.less
@@ -13,7 +13,8 @@
 
   li {
     display: block;
-    margin-bottom: 8px;
+    margin: 0 0 15px 0;
+    padding: 0;
   }
 
   a {
@@ -21,22 +22,18 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 8px 8px;
-    // border: 1px solid #DDD;
-    border-radius: 4px;
-    // box-shadow: 0 8px 16px -8px fade(black, 20%);
     color: inherit;
     text-decoration: none;
     font-size: 16px;
 
     &:hover, &:focus {
-      background: #F8F8F8;
+      background: #fff;
     }
   }
 
   .cover {
     flex: 0 0 50px;
-    display: none;
+    // display: none;
 
     img {
       display: block;
@@ -50,11 +47,12 @@
 
   .title {
     .gotham();
-    font-size: 18px;
+    font-size: 16px;
     color: var(--accent);
   }
 
   .author {
-    // font-style: italic;
+    color: #666;
+    font-size: 14px;
   }
 }
