footer overlap. closes #68

--- a/src/css/footer.less
+++ b/src/css/footer.less
@@ -2,6 +2,7 @@ footer {
   background: white;
   border-top: 1px solid #CCC;
   padding: 20px 15px;
+  z-index: 800;
 
   @media @tablet-above {
     padding-left: 40px;
