--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -10,6 +10,7 @@ main.concierge {
   display: flex;
   margin: auto;
   max-width: 2000px;
+  min-height: 80vh;
   padding: 20px 15px 40px 15px;
 
   @media @tablet-above {
