--- a/src/css/header.less
+++ b/src/css/header.less
@@ -105,6 +105,7 @@ header.hero {
     @media @mobile {
       margin-left: -7px;
       margin-right: -7px;
+      display: flex;
     }
 
     @media @tablet-above {
