Add styles for taking cover screenshots

--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -35,3 +35,18 @@ h3 {
 @import "fab";
 @import "footer";
 @import "about";
+
+.screenshot {
+  .catalog-covers {
+    columns: 18;
+    column-gap: 0;
+
+    .book-container {
+      margin-bottom: -2px;
+    }
+  }
+
+  .filters {
+    display: none;
+  }
+}
