Add some colors from Kaz

--- a/src/css/theming.less
+++ b/src/css/theming.less
@@ -12,8 +12,8 @@
 @accent-2018: #1097c3;
 @header-2019: #4e174e;
 @accent-2019: #9a4a9a;
-@header-2020: black;
-@accent-2020: green;
+@header-2020: #130f60;
+@accent-2020: #914ee3;
 
 .setup-year(@year, @accent, @header) {
   body[data-year="@{year}"] {
