Give the header a little extra texture

--- a/src/css/header.less
+++ b/src/css/header.less
@@ -2,8 +2,9 @@ header.hero {
   // background: #4a4a4a;
   // background: #19262f;
   background: var(--header, #333);
+  background-image: linear-gradient(to bottom, var(--header), var(--header-dark));
   // background: linear-gradient(0deg, var(--accent-spin) 0%, var(--accent) 100%);
-  background-image: url(./assets/books-header.png);
+  // background-image: url(./assets/books-header.png);
   transition: background .3s linear;
   padding: 25px 15px 0 15px;
   color: white;
@@ -11,6 +12,14 @@ header.hero {
 
   @media @tablet-above {
     padding: 40px 40px 0 40px;
+  }
+
+  svg.texture {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
   }
 
   .books-home {
