--- a/src/css/theming.less
+++ b/src/css/theming.less
@@ -20,6 +20,7 @@
     --accent: @accent;
     --accent-spin: darken(saturate(spin(@accent, 60), 5%), 10%);
     --header: @header;
+    --header-dark: darken(@header, 2%);
   };
 }
 
