Make sure SVG doesn't block header

--- a/src/css/header.less
+++ b/src/css/header.less
@@ -22,6 +22,10 @@ header.hero {
     height: 100%;
   }
 
+  .raised {
+    position: relative;
+  }
+
   .books-home {
     color: white;
     text-decoration: none;
