--- a/src/css/header.less
+++ b/src/css/header.less
@@ -1,8 +1,8 @@
 header.hero {
-  background: var(--header, #333);
-  background-image: linear-gradient(to bottom, var(--header), var(--header-dark));
+  background-color: var(--header, #333);
+  background-image: linear-gradient(to bottom, transparent, rgba(0, 0, 0, .3));
   // background-image: url(./assets/books-header.png);
-  transition: background .3s linear;
+  transition: background-color .3s linear;
   color: white;
   position: relative;
 
