update name, logo, theming

--- a/src/css/header.less
+++ b/src/css/header.less
@@ -54,12 +54,17 @@ header.hero {
     line-height: 1.0;
     margin-bottom: .3em;
 
+    img { max-width: 600px; }
+
     @media @mobile-above {
       font-size: 48px;
     }
   }
 
-  h2 { font-size: 36px; }
+  h2 {
+    font-size: 20px;
+    margin: 0 0 1.5em 0;
+  }
 
   p {
     .gotham();
