update theme colors

--- a/src/css/theming.less
+++ b/src/css/theming.less
@@ -14,8 +14,8 @@
 @accent-2019: #9a4a9a;
 @header-2020: #130f60;
 @accent-2020: #914ee3;
-@header-2021: #5fcfbc;
-@accent-2021: #5fcfbc;
+@header-2021: #cf573f;
+@accent-2021: @header-2021;
 
 .setup-year(@year, @accent, @header) {
   body[data-year="@{year}"] {
