--- a/src/css/header.less
+++ b/src/css/header.less
@@ -5,9 +5,10 @@ header.hero {
   transition: background-color .3s linear;
   color: white;
   position: relative;
+  padding: 20px 20px 0 20px;
 
   @media @tablet-above {
-    padding: 40px 40px 0 40px;
+    padding: 65px 40px 0 40px;
   }
 
   svg.texture {
@@ -19,7 +20,7 @@ header.hero {
   }
 
   .raised {
-    padding: 25px 15px 0 15px;
+    // padding: 25px 15px 0 15px;
     position: relative;
   }
 
@@ -83,18 +84,18 @@ header.hero {
       position: absolute;
 
       @media @tablet {
-        right: 20px;
-        top: 25px;
+        right: 0;
+        top: 0;
       }
 
       @media @tablet-above {
-        right: 40px;
+        right: 0;
         bottom: 10px;
       }
     }
 
     &.back-link {
-      margin: 0;
+      margin: 15px 0 0 0;
       padding-bottom: 22px;
     }
 
@@ -116,15 +117,17 @@ header.hero {
     border: none;
     padding: 0 0 6px 0;
     clear: both;
+    display: flex;
+    flex-wrap: nowrap;
 
     @media @mobile {
       margin-left: -7px;
       margin-right: -7px;
-      display: flex;
     }
 
     @media @tablet-above {
       padding-top: 22px;
+      display: block;
     }
 
     .loading & {
@@ -144,12 +147,13 @@ header.hero {
         border-top-left-radius: 4px;
         border-top-right-radius: 4px;
         text-align: center;
-        font-size: 12px;
+        font-size: 11px;
 
         @media @tablet {
           display: inline-block;
           margin-bottom: -8px;
-          width: floor((100% / 7) - 1);
+          width: floor((100% / 9) - 1);
+          margin-right: 1%;
         }
 
         @media @mobile-above {
@@ -176,6 +180,7 @@ header.hero {
         font-weight: bold;
         color: var(--accent);
         border-top: 2px solid var(--accent);
+        margin-top: -2px;
       }
     }
   }
