lower-case the "i" in "iTunes"

--- a/src/css/book.less
+++ b/src/css/book.less
@@ -131,6 +131,8 @@
       border-color: var(--accent);
       color: var(--accent);
 
+      .lower { text-transform: lowercase; }
+
       &:hover, &:focus {
         background: var(--accent);
         color: white;
