--- a/src/partials/_head.html
+++ b/src/partials/_head.html
@@ -27,7 +27,7 @@
 <!-- Social sharing meta -->
 <meta property="og:type" content="article">
 <meta property="og:title" content="<%= project.title %>">
-<meta property="og:site_name" content="NPR Visuals">
+<meta property="og:site_name" content="NPR">
 <meta property="og:url" content="<%= project.url %>">
 <meta property="og:image" content="<%= project.url + project.image %>?fbreset=1">
 <meta property="og:description" content="<%= project.description %>">
@@ -76,7 +76,7 @@
 
 <%
 // if !project.embedded...
-} 
+}
 %>
 
 <%= t.include("partials/_webfonts.html") %>
