--- a/src/partials/_head.html
+++ b/src/partials/_head.html
@@ -2,6 +2,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 
 <title><%= project.title %> : NPR</title>
+<meta name="description" content="<%= project.description %>">
 
 <!-- Favicon -->
 <link rel="apple-touch-icon" sizes="180x180" href="https://media.npr.org/templates/favicon/favicon-180x180.png" />
