setup for 2022; use test sheet

--- a/src/css/theming.less
+++ b/src/css/theming.less
@@ -16,6 +16,8 @@
 @accent-2020: #914ee3;
 @header-2021: #cf573f;
 @accent-2021: @header-2021;
+@header-2022: #cf573f;
+@accent-2022: @header-2022;
 
 .setup-year(@year, @accent, @header) {
   body[data-year="@{year}"] {
@@ -35,3 +37,4 @@
 .setup-year(2019, @accent-2019, @header-2019);
 .setup-year(2020, @accent-2020, @header-2020);
 .setup-year(2021, @accent-2021, @header-2021);
+.setup-year(2022, @accent-2022, @header-2022);
