mobile tab tweaks for safari,firefox

--- a/src/css/header.less
+++ b/src/css/header.less
@@ -188,13 +188,14 @@ header.hero {
   // Sample tab layout on mobile.
   .years-container {
     @media @tablet {
+      // Padding to determine scrollable area
+      .years {
+        padding: 0px 200px 0px 12px;
+      }
 
       // Make scrollable
-      overflow-x: auto;
+      overflow-x: scroll;
       overflow-y: hidden;
-
-      // Padding to determine scrollable area
-      padding: 0px 50% 0px 12px;
 
       // Fade the years on the right
       -webkit-mask-image: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 1) 60%, rgba(0, 0, 0, 0) 90%, rgba(0, 0, 0, 0));
