--- a/src/css/values.less
+++ b/src/css/values.less
@@ -43,6 +43,14 @@
 @unbiased: #000005;
 @true: #237bbd;
 
+// BWL rebrand
+@books-red: #D03D2A;
+@books-gold: #CA8B51;
+// @books-blue: #6D9BAA;
+@books-blue: #5c77b6;
+@books-beige: #E6D9CB;
+
+
 // other mixins
 .buttonBase() {
   border: 1px solid transparent;
