more branding styling

--- a/src/css/catalog.less
+++ b/src/css/catalog.less
@@ -104,7 +104,7 @@
       display: block;
       padding: 8px;
       border: 1px solid @accent;
-      background: white;
+      background: @books-offwhite;
       color: @accent;
       border-color: var(--accent);
       color: var(--accent);
