--- a/src/css/footer.less
+++ b/src/css/footer.less
@@ -1,6 +1,5 @@
 footer {
-  background: white;
-  border-top: 1px solid #CCC;
+  border-top: 1px solid #fff;
   padding: 20px 15px;
   z-index: 800;
 
@@ -20,7 +19,7 @@ footer {
     ul {
       border: none;
       padding: 0;
-      color: black;
+      color: #787878;
     }
   }
 }
