--- a/src/css/values.less
+++ b/src/css/values.less
@@ -3,6 +3,8 @@
 @mobile-above: ~"(min-width: 601px)";
 @tablet: ~"(max-width: 768px)";
 @tablet-above: ~"(min-width: 769px)";
+@desktop: ~"(max-width: 1000px)";
+@desktop-above: ~"(min-width: 1001px)";
 
 // Fonts
 @gotham: 'Gotham SSm', Helvetica, Arial, sans-serif;
@@ -46,9 +48,9 @@
 // BWL rebrand
 @books-red: #D03D2A;
 @books-gold: #CA8B51;
-// @books-blue: #6D9BAA;
 @books-blue: #5c77b6;
 @books-beige: #E6D9CB;
+@books-offwhite: #ebe9e5;
 
 
 // other mixins
@@ -66,7 +68,6 @@
     font-size: 12px;
   }
 }
-
 
 // a11y
 
