--- a/src/css/header.less
+++ b/src/css/header.less
@@ -1,14 +1,22 @@
 header.hero {
   background-color: var(--header, #333);
-  background-image: linear-gradient(to bottom, transparent, rgba(0, 0, 0, .3));
-  // background-image: url(./assets/books-header.png);
+  // background-image: linear-gradient(to bottom, transparent, rgba(0, 0, 0, .3));
   transition: background-color .3s linear;
   color: white;
   position: relative;
   padding: 20px 20px 0 20px;
 
   @media @tablet-above {
-    padding: 65px 40px 0 40px;
+    padding: 40px 40px 0 40px;
+
+    background-image: url(./assets/synced/illo-character-solo.png);
+    background-size: 225px;
+    background-repeat: no-repeat;
+    background-position: right 5% top 20px;
+  }
+  @media @desktop-above {
+    padding-top: 65px;
+    background-size: 275px;
   }
 
   svg.texture {
@@ -25,7 +33,7 @@ header.hero {
   }
 
   .books-home {
-    color: white;
+    color: @books-offwhite;
     text-decoration: none;
     font-size: 16px;
     .gotham();
@@ -53,9 +61,18 @@ header.hero {
     font-weight: bold;
     font-size: 28px;
     line-height: 1.0;
-    margin-bottom: .3em;
+    margin-bottom: .1em;
 
-    img { max-width: 600px; }
+    img {
+      max-width: 400px;
+
+      @media @tablet-above {
+        max-width: 500px;
+      }
+      @media @desktop-above {
+        max-width: 600px;
+      }
+    }
 
     @media @mobile-above {
       font-size: 48px;
@@ -64,7 +81,18 @@ header.hero {
 
   h2 {
     font-size: 20px;
-    margin: 0 0 1.5em 0;
+    margin: 0 0 .5em 0;
+
+    img {
+      max-width: 300px;
+
+      @media @tablet-above {
+        max-width: 350px;
+      }
+      @media @desktop-above {
+        max-width: 400px;
+      }
+    }
   }
 
   p {
@@ -82,16 +110,8 @@ header.hero {
     &.about-link {
       margin: 0;
       position: absolute;
-
-      @media @tablet {
-        right: 0;
-        top: 0;
-      }
-
-      @media @tablet-above {
-        right: 0;
-        bottom: 10px;
-      }
+      right: 0;
+      top: 0;
     }
 
     &.back-link {
@@ -109,6 +129,12 @@ header.hero {
       &:focus, &:hover {
         background: fade(white, 40%);
       }
+    }
+  }
+
+  h1, h2, p {
+    @media @desktop-above {
+      text-align: center;
     }
   }
 
@@ -168,18 +194,19 @@ header.hero {
       &:hover + label,
       &:focus + label {
         z-index: 999;
-        background: fade(#fff, 20%);
+        background: fade(@books-offwhite, 30%);
       }
 
       &:focus + label {
-        text-decoration: underline;
+        // text-decoration: underline;
       }
 
       &:checked + label {
-        background-color: #F8F8F8;
+        background-color: @books-offwhite;
         font-weight: bold;
-        color: var(--accent);
-        border-top: 2px solid var(--accent);
+        color: #000;
+        // color: var(--accent);
+        // border-top: 2px solid var(--accent);
         margin-top: -2px;
       }
     }
