--- a/src/css/values.less
+++ b/src/css/values.less
@@ -3,6 +3,8 @@
 @mobile-above: ~"(min-width: 601px)";
 @tablet: ~"(max-width: 768px)";
 @tablet-above: ~"(min-width: 769px)";
+@desktop: ~"(max-width: 1000px)";
+@desktop-above: ~"(min-width: 1001px)";
 
 // Fonts
 @gotham: 'Gotham SSm', Helvetica, Arial, sans-serif;
@@ -43,6 +45,14 @@
 @unbiased: #000005;
 @true: #237bbd;
 
+// BWL rebrand
+@books-red: #D03D2A;
+@books-gold: #CA8B51;
+@books-blue: #5c77b6;
+@books-beige: #E6D9CB;
+@books-offwhite: #ebe9e5;
+
+
 // other mixins
 .buttonBase() {
   border: 1px solid transparent;
@@ -58,7 +68,6 @@
     font-size: 12px;
   }
 }
-
 
 // a11y
 
