--- a/src/css/header.less
+++ b/src/css/header.less
@@ -77,6 +77,9 @@ header.hero {
     @media @mobile-above {
       font-size: 48px;
     }
+    @media @mobile {
+      width: calc(100% - 60px);
+    }
   }
 
   h2 {
