--- a/src/css/header.less
+++ b/src/css/header.less
@@ -182,7 +182,7 @@ header.hero {
           display: inline-block;
           margin-bottom: -8px;
           width: floor((100% / 9) - 1);
-          margin-right: 1%;
+          margin-right: 1em;
         }
 
         @media @mobile-above {
@@ -210,7 +210,7 @@ header.hero {
         color: #000;
         // color: var(--accent);
         // border-top: 2px solid var(--accent);
-        margin-top: -2px;
+        // margin-top: -2px;
       }
     }
   }
@@ -218,9 +218,11 @@ header.hero {
   // Sample tab layout on mobile.
   .years-container {
     @media @tablet {
+      margin-top: -2px;
       // Padding to determine scrollable area
       .years {
-        padding: 0px 200px 0px 12px;
+        padding: 0px 200px 6px 12px;
+        // -webkit-mask-image: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 1) 60%, rgba(0, 0, 0, 0) 90%, rgba(0, 0, 0, 0));
       }
 
       // Make scrollable
@@ -228,7 +230,7 @@ header.hero {
       overflow-y: hidden;
 
       // Fade the years on the right
-      -webkit-mask-image: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 1) 60%, rgba(0, 0, 0, 0) 90%, rgba(0, 0, 0, 0));
+      // -webkit-mask-image: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 1) 60%, rgba(0, 0, 0, 0) 90%, rgba(0, 0, 0, 0));
 
       // Set label padding (it was collapsing)
       input[type="checkbox"], input[type="radio"] {
