tweak gradient mask

--- a/src/css/header.less
+++ b/src/css/header.less
@@ -222,7 +222,6 @@ header.hero {
       // Padding to determine scrollable area
       .years {
         padding: 0px 200px 6px 12px;
-        // -webkit-mask-image: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 1) 60%, rgba(0, 0, 0, 0) 90%, rgba(0, 0, 0, 0));
       }
 
       // Make scrollable
@@ -230,7 +229,7 @@ header.hero {
       overflow-y: hidden;
 
       // Fade the years on the right
-      // -webkit-mask-image: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 1) 60%, rgba(0, 0, 0, 0) 90%, rgba(0, 0, 0, 0));
+      -webkit-mask-image: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 1) 75%, rgba(0, 0, 0, 0.3) 90%, rgba(0, 0, 0, 0));
 
       // Set label padding (it was collapsing)
       input[type="checkbox"], input[type="radio"] {
