--- a/src/css/header.less
+++ b/src/css/header.less
@@ -77,12 +77,17 @@ header.hero {
     @media @mobile-above {
       font-size: 48px;
     }
+    @media @mobile {
+      margin-bottom: .2em;
+      width: calc(100% - 70px);
+      min-width: 200px;
+    }
   }
 
   h2 {
-    font-size: 20px;
+    // font-size: 20px;
     margin: 0 0 .5em 0;
-
+    line-height: 0;
     img {
       max-width: 300px;
 
@@ -92,6 +97,10 @@ header.hero {
       @media @desktop-above {
         max-width: 400px;
       }
+    }
+    @media @mobile {
+      width: calc(100% - 70px);
+      min-width: 200px;
     }
   }
 
@@ -146,11 +155,6 @@ header.hero {
     display: flex;
     flex-wrap: nowrap;
 
-    @media @mobile {
-      margin-left: -7px;
-      margin-right: -7px;
-    }
-
     @media @tablet-above {
       padding-top: 22px;
       display: block;
@@ -179,7 +183,8 @@ header.hero {
           display: inline-block;
           margin-bottom: -8px;
           width: floor((100% / 9) - 1);
-          margin-right: 1%;
+          margin-right: 1em;
+          padding: 8px;
         }
 
         @media @mobile-above {
@@ -207,7 +212,24 @@ header.hero {
         color: #000;
         // color: var(--accent);
         // border-top: 2px solid var(--accent);
-        margin-top: -2px;
+      }
+    }
+  }
+
+  // Scrollable tabs on smaller screens
+  .years-container {
+    @media @tablet {
+      // Make scrollable
+      overflow-x: scroll;
+      overflow-y: hidden;
+
+      // Fade the years on the right
+      mask-image: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 1) 75%, rgba(0, 0, 0, 0.3) 90%, rgba(0, 0, 0, 0));
+      -webkit-mask-image: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 1) 75%, rgba(0, 0, 0, 0.3) 90%, rgba(0, 0, 0, 0));
+
+      .years {
+        // Padding at the end of scrollable area
+        padding-right: 200px;
       }
     }
   }
