update title tag

--- a/src/partials/_head.html
+++ b/src/partials/_head.html
@@ -1,7 +1,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 
-<title><%= project.title %> : NPR</title>
+<title>NPR : <%= project.title %></title>
 <meta name="description" content="<%= project.description %>">
 
 <!-- Favicon -->
