2023 edition: update header css; set production to false while we're working on updates

--- a/src/css/theming.less
+++ b/src/css/theming.less
@@ -16,3 +16,4 @@
 .setup-year(2020, @books-red, @books-gold);
 .setup-year(2021, @books-blue, @books-red);
 .setup-year(2022, @books-gold, @books-blue);
+.setup-year(2023, @books-red, @books-gold);
